--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
   "dependencies": {
     "@alch/alchemy-web3": "^1.1.4",
     "@openzeppelin/contracts": "^4.3.2",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0"
   }
 }
